# pokefirered-native

./: .gitignore  .gitmodules  CMakeLists.txt  HANDOFF.md  README.md  SESSION_LOG.md  autopush.sh  eval_env3.py  eval_env4.py  eval_env5.py  pfrn.py  pfrn_policy.py  play.py  tmp_repro_newgame.input
.project/: ASSET_GUIDE.md  PORTING_GUIDE.md  PORTING_MANIFEST.md  guardrails.md  protocol.md
.project/assets/: boot_path.manifest
build-codex-check/: CMakeCache.txt  Makefile  cmake_install.cmake  pfr_assets  pfr_play  pfr_render_test
build-codex-check/assets/intro/: copyright.4bpp  copyright.bin.lz
build-codex-check/assets/title_screen/: border_bg.4bpp  copyright_press_start.4bpp  copyright_press_start.bin.lz  unused6.bin.lz
build-codex-check/inc/intro/: copyright.4bpp.lz.u32.inc  copyright.4bpp.u16.inc  copyright.bin.lz.u8.inc  copyright.bin.u32.inc  copyright.gbapal.lz.u16.inc  copyright.gbapal.lz.u32.inc  gengar.gbapal.lz.u32.inc  gengar.gbapal.lz.u8.inc  gengar.gbapal.u16.inc  nidorino.gbapal.lz.u16.inc  nidorino.gbapal.lz.u8.inc  nidorino.gbapal.u16.inc  nidorino.gbapal.u8.inc
build-codex-check/inc/title_screen/: border_bg.4bpp.u8.inc  copyright_press_start.4bpp.lz.u32.inc  copyright_press_start.4bpp.lz.u8.inc  copyright_press_start.4bpp.u16.inc  copyright_press_start.bin.lz.u32.inc  slash.4bpp.lz.u16.inc  slash.4bpp.lz.u32.inc  slash.4bpp.lz.u8.inc  slash.4bpp.u32.inc  slash.4bpp.u8.inc  unused1.bin.lz.u16.inc  unused1.bin.lz.u8.inc  unused2.bin.lz.u32.inc  unused2.bin.lz.u8.inc  unused2.bin.u8.inc  unused3.bin.lz.u16.inc  unused3.bin.lz.u8.inc  unused3.bin.u32.inc  unused4.bin.lz.u16.inc  unused4.bin.lz.u32.inc  unused4.bin.lz.u8.inc  unused4.bin.u16.inc  unused4.bin.u32.inc  unused4.bin.u8.inc  unused5.bin.lz.u16.inc  unused5.bin.lz.u8.inc  unused5.bin.u16.inc  unused6.bin.lz.u32.inc  unused6.bin.lz.u8.inc  unused6.bin.u32.inc
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  pfr_assets  pfr_play  pfr_render_test
build-debug/assets/intro/: copyright.4bpp.lz  copyright.gbapal.lz  gengar.gbapal.lz  nidorino.gbapal.lz
build-debug/assets/title_screen/: border_bg.4bpp.lz  copyright_press_start.4bpp.lz  slash.4bpp.lz  unused1.bin.lz  unused2.bin.lz  unused3.bin.lz  unused4.bin.lz  unused5.bin.lz
build-debug/inc/intro/: copyright.4bpp.lz.u16.inc  copyright.4bpp.lz.u8.inc  copyright.4bpp.u32.inc  copyright.4bpp.u8.inc  copyright.bin.lz.u16.inc  copyright.bin.lz.u32.inc  copyright.bin.u16.inc  copyright.bin.u8.inc  copyright.gbapal.lz.u8.inc  copyright.gbapal.u16.inc  copyright.gbapal.u32.inc  copyright.gbapal.u8.inc  gengar.gbapal.lz.u16.inc  gengar.gbapal.u32.inc  gengar.gbapal.u8.inc  nidorino.gbapal.lz.u32.inc  nidorino.gbapal.u32.inc
build-debug/inc/title_screen/: border_bg.4bpp.lz.u16.inc  border_bg.4bpp.lz.u32.inc  border_bg.4bpp.lz.u8.inc  border_bg.4bpp.u16.inc  border_bg.4bpp.u32.inc  copyright_press_start.4bpp.lz.u16.inc  copyright_press_start.4bpp.u32.inc  copyright_press_start.4bpp.u8.inc  copyright_press_start.bin.lz.u16.inc  slash.4bpp.u16.inc  (+20 more)
golden_frames/: copyright_screen.ppm  gamefreak_logo.ppm  main_menu.ppm  manifest.txt  metadata.json  oak_ask_player_gender.ppm  oak_controls_page1.ppm  oak_i_study_pokemon.ppm  pikachu_intro_2.ppm  title_screen.ppm
pfr_play_frames/: 000001_callback2_-__CB2_InitCopyrightScreenAfterBootup__0x4066f0_.ppm  000307_callback2_-___unknown___0x40ccb0_.ppm  000735_start_new_game_scene.ppm  001582_Oak_placeholder_-___other_Oak_placeholder_.ppm  002443_Oak_placeholder_-___other_Oak_placeholder_.ppm  002716_Oak_placeholder_-___other_Oak_placeholder_.ppm  002745_Oak_placeholder_-___other_Oak_placeholder_.ppm  002794_Oak_placeholder_-___other_Oak_placeholder_.ppm  002837_Oak_placeholder_-___other_Oak_placeholder_.ppm  002860_Oak_placeholder_-__gOakSpeech_Text_IStudyPokemon.ppm  002911_oak_controls_page_3.ppm  002998_Oak_placeholder_-__gOakSpeech_Text_TellMeALittleAboutYourself.ppm  003108_Oak_placeholder_-__gOakSpeech_Text_AskPlayerGender.ppm  003185_Oak_placeholder_-__gOakSpeech_Text_YourRivalsNameWhatWasIt.ppm  003362_Oak_placeholder_-___other_Oak_placeholder_.ppm  003732_Oak_placeholder_-___other_Oak_placeholder_.ppm  003858_Oak_placeholder_-__gOakSpeech_Text_YourNameWhatIsIt.ppm  003928_Oak_placeholder_-___other_Oak_placeholder_.ppm  004160_oak_pikachu_intro_3.ppm  004197_Oak_placeholder_-___other_Oak_placeholder_.ppm  004532_Oak_placeholder_-___other_Oak_placeholder_.ppm  004615_Oak_placeholder_-___other_Oak_placeholder_.ppm  004623_Oak_placeholder_-___other_Oak_placeholder_.ppm  004762_Oak_placeholder_-___other_Oak_placeholder_.ppm  004796_Oak_placeholder_-___other_Oak_placeholder_.ppm  004893_Oak_placeholder_-___other_Oak_placeholder_.ppm  005171_Oak_placeholder_-__gOakSpeech_Text_AskPlayerGender.ppm  005389_Oak_placeholder_-__gOakSpeech_Text_AskPlayerGender.ppm  007631_uniform_frame_warning.ppm
scripts/: build_reference_rom.sh  capture_golden_frames.lua  capture_golden_frames.sh  charmap_preproc.sh  golden_check.sh  mgba_capture.c
src/: host_agbmain.c  host_agbmain.h  host_audio.c  host_bios.c  host_capture_manifest.c  host_capture_manifest.h  host_charmap.c  host_charmap.h  host_crt0.c  host_crt0.h  host_debug.c  host_display.c  host_display.h  host_dma.c  host_dma.h  host_flash.c  host_flash.h  host_frame_step.c  host_frame_step.h  host_intro_stubs.c  host_intro_stubs.h  host_log.c  host_log.h  host_memory.c  host_memory.h  host_new_game_stubs.c  host_new_game_stubs.h  host_oak_speech_stubs.c  host_oak_speech_stubs.h  host_pointer_codec.c  host_pointer_codec.h  host_renderer.c  host_renderer.h  host_runtime_stubs.h  host_savestate.c  host_savestate.h  host_sound_init.c  host_sound_mixer.c  host_timer.c  host_timer.h  (+26 more)
src/host_include/: dma3.h  global.h  host_audio.h  host_sound_init.h
tests/: battle_test.c  pfr_play_oak_path.input  render_test.c  smoke.c
tools/: battle_anim_tables_to_c.py  extract_incbin.py  generate_sound_bins.py  inc_text_to_c.py  map_data_to_c.py  pfr_assets.c  pfr_frame_diff.c  pfr_lz77.c  preproc_charmap.py  script_assembler.py  sound_data_to_c.py  specials_to_c.py
(+435 files in other folders)
